--- a/content/cloud-docs/users-teams-organizations/users.mdx
+++ b/content/cloud-docs/users-teams-organizations/users.mdx
@@ -14,7 +14,8 @@ description: >-
 
 User accounts belong to individual people. Each user can be part of one or more [teams](/cloud-docs/users-teams-organizations/teams), which are granted permissions on workspaces within an organization. A user can be a member of multiple [organizations][].
 
--> **API:** Refer to the [Account API](/cloud-docs/api-docs/account) to get account details, update account information, and change your password.
+## API
+Use the [Account API](/cloud-docs/api-docs/account) to get account details, update account information, and change your password.
 
 ## Creating an Account
 
