--- a/content/enterprise/before-installing/reference-architecture/azure.mdx
+++ b/content/enterprise/before-installing/reference-architecture/azure.mdx
@@ -37,13 +37,14 @@ architecture.
 
 -> **Note:** This reference architecture focuses on the _External Services_ operational mode.
 
-Depending on the chosen [operational
-mode](/enterprise/before-installing/#operational-mode-decision),
-the infrastructure requirements for Terraform Enterprise range from a single [Azure VM
-instance](https://azure.microsoft.com/en-us/services/virtual-machines/) for
-demo or proof of concept installations to multiple instances connected to
-[Azure Database for PostgreSQL](https://azure.microsoft.com/en-us/services/postgresql/) and
-[Azure Blob Storage](https://azure.microsoft.com/en-us/services/storage/blobs/) for a stateless production installation.
+Requirements depend on the chosen [operational
+mode](/enterprise/before-installing/#opearational-mode-decision). For example,
+an installation on Mounted Disk mode may require a single Azure VM instance,
+whereas a stateless production installation may require multiple instances
+connected to [Azure Database for
+PostgreSQL](https://azure.microsoft.com/en-us/services/postgresql/) and [Azure
+Blob Storage](https://azure.microsoft.com/en-us/services/storage/blobs/) for a
+stateless production installation.
 
 The following table provides high-level server recommendations and is meant as
 a guideline. Of particular note is the strong recommendation to avoid non-fixed
