--- a/content/enterprise/before-installing/reference-architecture/gcp.mdx
+++ b/content/enterprise/before-installing/reference-architecture/gcp.mdx
@@ -36,10 +36,11 @@ architecture.
 -> **Note:** This reference architecture focuses on the _External Services_ operational mode.
 
 Depending on the chosen [operational
-mode](/enterprise/before-installing/#operational-mode-decision),
-the infrastructure requirements for Terraform Enterprise range from a single Cloud Compute VM instance
-for demo installations to multiple instances connected to Cloud SQL and Cloud Storage for a
-stateless production installation.
+mode](/enterprise/before-installing/#operational-mode-decision), the
+infrastructure requirements for Terraform Enterprise range from a single Cloud
+Compute VM instance for _Mounted Disk_ installations to multiple instances
+connected to Cloud SQL and Cloud Storage for a stateless production
+installation.
 
 The following table provides high-level server guidelines. Of particular
 note is the strong recommendation to avoid non-fixed performance CPUs,
