Add manage workspace run tasks permission to Workspace Admins and Fixed Permissions sections

--- a/content/cloud-docs/users-teams-organizations/permissions.mdx
+++ b/content/cloud-docs/users-teams-organizations/permissions.mdx
@@ -102,6 +102,7 @@ Workspace admins have the following permissions on their workspace:
 - Read and write workspace settings (workspace admins only) — this includes general settings, notification configurations, run triggers, and more.
 - Set or remove workspace permissions for any team (workspace admins only)
 - Delete workspace (workspace admins only)
+- Manage workspace run tasks
 
 See [General Workspace Permissions][] above for details about specific permissions.
 
@@ -140,6 +141,7 @@ The "write" permission set is for people who do most of the day-to-day work of p
 - Download Sentinel mocks
 - Read and write variables
 - Read and write state versions
+- Manage workspace run tasks
 
 See [General Workspace Permissions][] above for details about specific permissions.
 
