--- a/content/enterprise/releases/2022/v202204-2.mdx
+++ b/content/enterprise/releases/2022/v202204-2.mdx
@@ -2,7 +2,11 @@
 page_title: Releases - Terraform Enterprise
 ---
 
-# TFE Release v202204-1 (609)
+# TFE Release v202204-2 (610 Required)
+
+## CHANGES SINCE v202204-1
+
+The `tfe-bootstrap` container now automatically negotiates the Docker API version before making requests to the Docker API to prevent `Error response from daemon: client version 1.41 is too new. Maximum supported API version is 1.40` errors upon Terraform Enterprise installation or upgrade.
 
 ## UPCOMING APPLICATION LEVEL BREAKING CHANGE
 
