Update tfc-agent changelog

--- a/content/cloud-docs/agents/changelog.mdx
+++ b/content/cloud-docs/agents/changelog.mdx
@@ -16,6 +16,18 @@ within each release are categorized into one or more of the following labels:
 Each version below corresponds to a release artifact available for download on
 the official [releases website](https://releases.hashicorp.com/tfc-agent/).
 
+## 1.1.6 (04/20/2022)
+
+BUG FIXES:
+
+* Fixed OpenTelemetry metrics by rolling back client version (#144)
+
+## 1.1.5 (04/18/2022)
+
+IMPROVEMENTS:
+
+* Improved resilience of downloads by adding retries. (#136)
+
 ## 1.1.4 (03/22/2022)
 
 BUG FIXES:
