--- a/content/enterprise/releases/2022/v202204-1.mdx
+++ b/content/enterprise/releases/2022/v202204-1.mdx
@@ -4,6 +4,10 @@ page_title: Releases - Terraform Enterprise
 
 # TFE Release v202204-1 (609)
 
+## Known Issues
+
+1. [April 21, 2022] This release includes an issue with the `tfe-bootstrap` container being unable to negotiate the Docker API version causing the installation and upgrade of Terraform Enterprise to fail with `Error response from daemon: client version 1.41 is too new. Maximum supported API version is 1.40` affecting docker `v19.03.x` or older. This issue is fixed in `v202204-2`.
+
 ## UPCOMING APPLICATION LEVEL BREAKING CHANGE
 
 The Terraform Enterprise May 2022 release will change the names of application containers from `ptfe_*` to `tfe-*` for product consistency. For example, `ptfe_nginx` will be changed to `tfe-nginx`. If you have downstream configuration (monitoring, log forwarding etc.) that references the older naming scheme, you will need to update container references to the new names.
