--- a/content/cloud-docs/api-docs/run.mdx
+++ b/content/cloud-docs/api-docs/run.mdx
@@ -67,14 +67,14 @@ The run state is found in `data.attributes.status`, and you can reference the fo
 | `policy_soft_failed`   | A sentinel policy has soft failed for a plan-only run.  This is a final state.                                                                                                                                                                                                                                                                                                                                                     |
 | `policy_checked`       | The sentinel policy checking phase of a run has completed.                                                                                                                                                                                                                                                                                                                                                                         |
 | `confirmed`            | The plan produced by the run has been confirmed.                                                                                                                                                                                                                                                                                                                                                                                   |
-| `planned_and_finished` | The completion of a run containing a plan only, or a run the produces a plan with no changes to apply.  This is a final state.                                                                                                                                                                                                                                                                                                     |
+| `planned_and_finished` | The completion of a run containing a plan only, or a run that produces a plan with no changes to apply.  This is a final state.                                                                                                                                                                                                                                                                                                     |
 | `apply_queued`         | Once the changes in the plan have been confirmed, the run run will transition to `apply_queued`. This status indicates that the run should start as soon as the backend services that run terraform have available capacity. In Terraform Cloud, you should seldom see this status, as our aim is to always have capacity. However, in Terraform Enterprise this status will be more common due to the self-hosted nature.         |
 | `applying`             | The applying phase of a run is in progress.                                                                                                                                                                                                                                                                                                                                                                                        |
 | `applied`              | The applying phase of a run has completed.                                                                                                                                                                                                                                                                                                                                                                                         |
 | `discarded`            | The run has been discarded. This is a final state.                                                                                                                                                                                                                                                                                                                                                                                 |
 | `errored`              | The run has errored. This is a final state.                                                                                                                                                                                                                                                                                                                                                                                        |
 | `canceled`             | The run has been canceled.                                                                                                                                                                                                                                                                                                                                                                                                         |
-| `force_canceled`       | The run has been canceled forcefully.                                                                                                                                                                                                                                                                                                                                                                                              |
+| `force_canceled`       | The run has been canceled, forcefully.                                                                                                                                                                                                                                                                                                                                                                                              |
 
 ## Create a Run
 
