plugin: Update tfsdk.NewProtocol6Server usage with new functions
Reference: https://github.com/hashicorp/terraform-plugin-framework/pull/294

--- a/content/plugin/mux/combining-protocol-version-6-providers.mdx
+++ b/content/plugin/mux/combining-protocol-version-6-providers.mdx
@@ -67,12 +67,8 @@ func main() {
 	ctx := context.Background()
 	providers := []func() tfprotov6.ProviderServer{
 		// Example terraform-plugin-framework providers
-		func() tfprotov6.ProviderServer {
-			return tfsdk.NewProtocol6Server(provider1.New("test")())
-		},
-		func() tfprotov6.ProviderServer {
-			return tfsdk.NewProtocol6Server(provider2.New("test")())
-		},
+		tfsdk.NewProtocol6ProviderServer(provider1.New("test")())
+		tfsdk.NewProtocol6ProviderServer(provider2.New("test")())
 	}
 
 	muxServer, err := tf6muxserver.NewMuxServer(ctx, providers...)
@@ -113,12 +109,8 @@ resource.Test(t, resource.TestCase{
 			ctx := context.Background()
 			providers := []func() tfprotov6.ProviderServer{
 				// Example terraform-plugin-framework providers
-				func() tfprotov6.ProviderServer {
-					return tfsdk.NewProtocol6Server(provider1.New("test")())
-				},
-				func() tfprotov6.ProviderServer {
-					return tfsdk.NewProtocol6Server(provider2.New("test")())
-				},
+				tfsdk.NewProtocol6ProviderServer(provider1.New("test")())
+				tfsdk.NewProtocol6ProviderServer(provider2.New("test")())
 			}
 
 			muxServer, err := tf6muxserver.NewMuxServer(ctx, providers...)
