Apply suggestions from code review
Co-authored-by: Ivan De Marino <ivan.demarino@hashicorp.com>

--- a/content/plugin/debugging.mdx
+++ b/content/plugin/debugging.mdx
@@ -50,9 +50,9 @@ Debugger-based debugging is a method of using a debugging tool similar to
 [delve](https://github.com/go-delve/delve) to inspect what is happening in a
 provider as it is happening, often using breakpoints to pause execution of the
 provider and examine the values of variables. This method of debugging must be
-done contemporaneously; the developer doing the debugging needs to actively run
+done contemporarily; the developer doing the debugging needs to actively run
 Terraform using the appropriate configuration and in the appropriate
-environment to induce the behavior being examined. It is therefore most useful
+environment to reproduce the issue. It is therefore most useful
 when a bug is reliably reproducible. This level of analysis enables developers to
 ask arbitrary questions and step through provider executions, allowing them to
 explore what is happening in the provider during runtime.
