Add PMR modules to data security table

--- a/content/cloud-docs/architectural-details/data-security.mdx
+++ b/content/cloud-docs/architectural-details/data-security.mdx
@@ -20,6 +20,7 @@ seriously. This table lists which parts of the Terraform Cloud and Terraform Ent
 | Terraform Plan Result                | Blob Storage | Vault Transit Encryption |
 | Terraform State                      | Blob Storage | Vault Transit Encryption |
 | Terraform Logs                       | Blob Storage | Vault Transit Encryption |
+| Private Module Registry Modules      | Blob Storage | Vault Transit Encryption |
 | Terraform/Environment Variables      | PostgreSQL   | Vault Transit Encryption |
 | Organization/Workspace/Team Settings | PostgreSQL   | No                       |
 | Account Password                     | PostgreSQL   | bcrypt                   |
