Add Run Tasks Entitlement to API Docs
Previously Run Tasks was a feature flag but it is now a proper organization
entitlement.  This commit updates the various feature set and organization
entitlement examples with the new `run-tasks` entitlement, and updates
the feature set list with what this new entitlement affects.

--- a/content/cloud-docs/api-docs/feature-sets.mdx
+++ b/content/cloud-docs/api-docs/feature-sets.mdx
@@ -84,6 +84,7 @@ curl \
         "self-serve-billing": true,
         "cost-estimation": false,
         "sentinel": false,
+        "run-tasks": false,
         "teams": true,
         "user-limit": null,
         "audit-logging": false,
@@ -106,6 +107,7 @@ curl \
         "self-serve-billing": true,
         "cost-estimation": true,
         "sentinel": true,
+        "run-tasks": true,
         "teams": true,
         "user-limit": null,
         "audit-logging": false,
@@ -128,6 +130,7 @@ curl \
         "self-serve-billing": false,
         "cost-estimation": true,
         "sentinel": true,
+        "run-tasks": true,
         "teams": true,
         "user-limit": null,
         "audit-logging": true,
@@ -150,6 +153,7 @@ curl \
         "self-serve-billing": true,
         "cost-estimation": true,
         "sentinel": true,
+        "run-tasks": true,
         "teams": true,
         "user-limit": null,
         "audit-logging": false,
@@ -172,6 +176,7 @@ curl \
         "self-serve-billing": true,
         "cost-estimation": false,
         "sentinel": false,
+        "run-tasks": false,
         "teams": false,
         "user-limit": 5.0,
         "audit-logging": false,
@@ -231,6 +236,7 @@ curl \
         "self-serve-billing": true,
         "cost-estimation": false,
         "sentinel": false,
+        "run-tasks": false,
         "teams": true,
         "user-limit": null,
         "audit-logging": false,
@@ -253,6 +259,7 @@ curl \
         "self-serve-billing": true,
         "cost-estimation": true,
         "sentinel": true,
+        "run-tasks": true,
         "teams": true,
         "user-limit": null,
         "audit-logging": false,
@@ -275,6 +282,7 @@ curl \
         "self-serve-billing": false,
         "cost-estimation": true,
         "sentinel": true,
+        "run-tasks": true,
         "teams": true,
         "user-limit": null,
         "audit-logging": true,
@@ -297,6 +305,7 @@ curl \
         "self-serve-billing": true,
         "cost-estimation": false,
         "sentinel": false,
+        "run-tasks": false,
         "teams": false,
         "user-limit": 5.0,
         "audit-logging": false,
