--- a/content/cloud-docs/api-docs/index.mdx
+++ b/content/cloud-docs/api-docs/index.mdx
@@ -86,6 +86,7 @@ The following entitlements are available:
 - `cost-estimation` — Allows an organization to access [cost estimation][].
 - `operations` — Allows an organization to perform runs within Terraform Cloud. Affects the [runs][], [plans][], and [applies][] endpoints.
 - `private-module-registry` — Allows an organization to publish and use modules with the [private module registry][]. Affects the [registry modules][] endpoints.
+- `run-tasks` — Allows an organization to use [run tasks](/cloud-docs/workspaces/settings/run-tasks). Affects the [run tasks][] endpoints.
 - `self-serve-billing` — Allows an organization to pay via credit card using the in-app billing UI.
 - `state-storage` — Allows an organization to store state versions in its workspaces, which enables local Terraform runs with Terraform Cloud. Affects the [state versions][] endpoints.
 - `sentinel` — Allows an organization to use [Sentinel][]. Affects the [policies][], [policy sets][], and [policy checks][] endpoints.
@@ -127,6 +128,8 @@ The following entitlements are available:
 [registry providers]: /cloud-docs/api-docs/providers
 
 [runs]: /cloud-docs/api-docs/run
+
+[run tasks]: /cloud-docs/api-docs/run-tasks
 
 [Sentinel]: /cloud-docs/sentinel
 
