--- a/content/cloud-docs/api-docs/organizations.mdx
+++ b/content/cloud-docs/api-docs/organizations.mdx
@@ -495,6 +495,7 @@ curl \
         "operations": true,
         "private-module-registry": true,
         "sentinel": false,
+        "run-tasks": false,
         "state-storage": true,
         "teams": false,
         "vcs-integrations": true,
@@ -712,6 +713,7 @@ curl \
       "operations": true,
       "private-module-registry": true,
       "sentinel": false,
+      "run-tasks": false,
       "state-storage": true,
       "teams": false,
       "vcs-integrations": true,
