--- a/content/cloud-docs/api-docs/subscriptions.mdx
+++ b/content/cloud-docs/api-docs/subscriptions.mdx
@@ -116,6 +116,7 @@ curl \
         "self-serve-billing": true,
         "cost-estimation": false,
         "sentinel": false,
+        "run-tasks": false,
         "teams": false,
         "user-limit": 5.0,
         "audit-logging": false,
@@ -201,6 +202,7 @@ curl \
         "self-serve-billing": true,
         "cost-estimation": false,
         "sentinel": false,
+        "run-tasks": false,
         "teams": false,
         "user-limit": 5.0,
         "audit-logging": false,
