--- a/content/plugin/debugging.mdx
+++ b/content/plugin/debugging.mdx
@@ -117,7 +117,7 @@ An example `.vscode/launch.json` configuration file:
             "program": "${workspaceFolder}",
             "env": {},
             "args": [
-                "-debug",
+                "-debuggable",
             ]
         }
     ]
